--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <body>
       <h2 class="center">Flavia Apolinario Bruno</h2>
 
+      <img class="img-perfil" src="imgs/paia.jpeg" alt="foto de perfil" width="300px">
+
       <h4>Informações pessoais</h4>
       <ul>
           <li>Data nascimento: 30/01/1967</li>
@@ -31,8 +33,8 @@
       
       <h4>Contato dos responsáveis</h4>
       <ul>
-          <li>Ana Carolina Papa: +55 92 9 9119-6789</li>
-          <li>Sonia Maria Garcia Papa: +55 92 9 8121-5990</li>
+          <li>Ana Carolina Papa: <a href="tel:+55 92 9 9119-6789">(092) 9 9119-6789</a></li>
+          <li>Sonia Maria Garcia Papa: <a href="tel:+55 92 9 8121-5990">(092) 9 8121-5990</a></li>
       </ul>
       
       <h4>Alergias</h4>
