--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h4>Informações pessoais</h4>
       <ul>
           <li>Data nascimento: 30/01/1967</li>
-          <li>Sexo: Femenino</li>
+          <li>Sexo: Feminino</li>
           <li>SUS: 708902773371714</li>
       </ul>
       
