--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h4>Informações médicas</h4>
       <ul>
           <li>Possui Paralisia cerebral</li>
-          <li>Faz uso de Cardenal 100mg</li>
+          <li>Faz uso de Gardenal 100mg</li>
       </ul>
       
       <h4>Contato dos responsáveis</h4>
